# mach

./: .gitignore  CMakeLists.txt  LICENSE.TXT  README.md  build.sh  build_pass.sh  dump_IR.sh  format_code.sh  pre-commit.hook  run.sh  setup_env.sh  test.sh
dump_ir_pass/: CMakeLists.txt  dump_ir_pass.cpp
experimentpass/: CMakeLists.txt  experimentpass.cpp
mpi_assertion_checker/: CMakeLists.txt  additional_assertions.cpp  additional_assertions.h  analysis_results.cpp  analysis_results.h  conflict_detection.cpp  conflict_detection.h  debug.h  function_coverage.cpp  function_coverage.h  implementation_specific.cpp  implementation_specific.h  mpi_assertion_checker.cpp  mpi_functions.cpp  mpi_functions.h
msg_order_relax_checker/: CMakeLists.txt  additional_assertions.cpp  additional_assertions.h  conflict_detection.cpp  conflict_detection.h  function_coverage.cpp  function_coverage.h  implementation_specific.cpp  implementation_specific.h  mpi_functions.cpp  mpi_functions.h  msg_order_relax_checker.cpp
scripts/: getLLVM.sh  installLLVM.sh
tests/: one_message.c  one_message_not_matching_length.c  test_cases.txt  two_messages_any_conflict.c  two_messages_bar_seperated.c  two_messages_no_conflict.c  two_messages_solvable_conflict.c  two_messages_wrong_bar.c
tests/complex/: gather_bcast.c  gather_results.c  gather_results_nondeterminally.c  heated-plate.c  heated-plate.cpp  heated-plate_2.c  heated-plate_2.cpp  heated-plate_3.cpp  heated-plate_4.cpp  heated-plate_5.cpp  heated-plate_while.c  heated-plate_while.cpp  heated-plate_while_2.c  heated-plate_while_2.cpp  master.c  stencil_allreduce.c  stencil_allreduce_2.c  stencil_iterations.c  stencil_iterations_correct.c
tests/hidden_in_functions/: bar.c  send.c  send_2.c
tests/more_msg/: MRecv.c  conflict_2.c  not_matching_length.c  waitall.c  waitall_bar.c  waitall_bar_2.c  waitall_bar_3.c  wrong.c
tests/two_messages/: Ibarrier.c  Ibarrier_2.c  Ibarrier_3.c  Ibarrier_4.c  MRecv.c  allreduce_seperated.c  bar_bsend.c  bar_bsend_2.c  bar_irecv.c  bar_isend.c  bar_isend_2.c  bar_seperated.c  mpi_any_conflict.c  mpi_any_conflict_2.c  no_conflict.c  red_seperated.c  sendrecv_conflict.c  sendrecv_no_conflict.c  solvable_conflict.c  wrong_bar.c  wrong_bar_cocrrected.c  wrong_bar_cocrrected_2.c
